--- a/docs/_data/authors.yml
+++ b/docs/_data/authors.yml
@@ -376,3 +376,13 @@ lvjie:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ssssnail"
+
+zohinxa:
+  name: "赵欣"
+  bio: "人工智能方向产品经理"
+  avatar: "https://avatars3.githubusercontent.com/u/44439119"
+  membership: chair
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/zohinxa"
